# Mandelbrot_Set

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrotCuda.cu  mandelbrotCuda.cuh  mandelbrotWidget.cpp  mandelbrotWidget.h
